<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="322dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="33dp"
            android:gravity="center"
            android:text="@string/rateus" />

        <Button
            android:id="@+id/gotogps"
            style="@style/CropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="23dp"
            android:text="@string/gotogps"
            android:textColor="#000"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/later"
            android:layout_alignLeft="@+id/later"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textView1"
            android:tileMode="repeat"
    		android:dither="true" 
            android:src="@drawable/giftcard" />

        <Button
            android:id="@+id/later"
            style="@style/CropButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="28dp"
            android:text="@string/later"
            android:textColor="#000"
            android:textSize="12sp" />

    </RelativeLayout>

</LinearLayout>
