<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/fav"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favButtonDesc"
        android:src="@android:drawable/btn_star_big_on" />
    
</RelativeLayout>
    
<android.support.v4.view.ViewPager
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="3.24" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:id="@+id/button_container"
    android:orientation="horizontal"
    android:baselineAligned="false" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center" >

		<ImageButton
		    android:id="@+id/backward"
		    style="@style/CropButton"
		    android:layout_width="15dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.30"
		    android:src="@drawable/backward"
		    android:textColor="#000" />

	    <Button
	        android:id="@+id/save"
	        style="@style/CropButton"
	        android:textColor="#000"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.45"
	        android:text="@string/save_text"
	        android:textSize="15sp" />
            
	    <Button
	        android:id="@+id/edit_set"
	        style="@style/CropButton"
	        android:textColor="#000"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.45"
	        android:text="@string/edit_set"
	        android:textSize="15sp" />
	    
	    <Button
    	        android:id="@+id/wallpaper"
    	        style="@style/CropButton"
	        	android:textColor="#000"
    	        android:layout_width="0dp"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="0.85"
    	        android:text="@string/wallpaper_text"
    	        android:textSize="15sp" />

	    <ImageButton
	        android:id="@+id/forward"
	        style="@style/CropButton"
	        android:layout_width="15dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.30"
	        android:src="@drawable/forward"
	        android:textColor="#000" />

	</LinearLayout>

    	

	<LinearLayout android:layout_width="0dip"
		    android:layout_height="wrap_content"
        android:visibility="gone"
		    android:layout_weight="1">
    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_text" />
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.20"
        android:background="@android:color/transparent"
        android:contentDescription="Facebook"
        android:src="@drawable/facebook" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.18"
        android:background="@android:color/transparent"
        android:contentDescription="Twitter"
        android:src="@drawable/twitter" />

    <ImageButton
        android:id="@+id/insta"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.16"
        android:background="@android:color/transparent"
        android:src="@drawable/instagram" />

    <ImageButton
        android:id="@+id/googleplus"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.22"
        android:background="@android:color/transparent"
        android:contentDescription="Google Plus"
        android:src="@drawable/googleplus" />

    <ImageButton
        android:id="@+id/pinterest"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.19"
        android:background="@android:color/transparent"
        android:contentDescription="Send Via Email"
        android:src="@drawable/pinterest" />

    <ImageButton
        android:id="@+id/sms"
        android:layout_width="66dp"
        android:layout_height="76dp"
        android:layout_weight="0.22"
        android:background="@android:color/transparent"
        android:contentDescription="Share via SMS"
        android:src="@drawable/sms" />

</LinearLayout>

</LinearLayout>
